--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -242,14 +242,12 @@ header{
     align-items: center;
     justify-content: center;
     margin-top: -5%;
+    margin-bottom: -5%;
     overflow: hidden;
-    /*background: url('../img/backgrounds/back2.gif') center/cover no-repeat;
-    display: flex;
-    opacity: 70%;*/
 }
 
 .about_image img {
-    padding-top: 20px;
+    padding-top: 5px;
     width: clamp(500px, 400vw, 400px);
     border-radius: 50%;
 }
@@ -370,6 +368,7 @@ margin-top: -5%;
     margin-right: 30px;
     width: 330px;
     margin-bottom: 20px;
+    margin-top: 20px;
     align-items: center;
     position: relative;
     text-align: center;
@@ -381,38 +380,14 @@ margin-top: -5%;
 
 .tarjeta:hover {
     cursor: pointer;
-    transform: scale(1.075); 
+    transform: scale(1.025); 
+    z-index: 10;
 }
-
 
 .tarjeta img {
     width: 100%;
     height: auto;
     border-radius: 10%;
-}
-
-.tarjeta h3 {
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-    font-size: 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    opacity: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 3%;
-    padding-right: 3%;
-    z-index: 1;
-}
-
-.tarjeta:hover h3 {
-    opacity: 1;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
 }
 
 .tarjeta-luz {
@@ -488,177 +463,13 @@ background-color: transparent;
 }
 
 
-/*====================================================CONTACT=======================================================*/
-
-.contact {
-    padding-top: 50px;
-    padding-bottom: 80px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    background-color: rgb(0, 0, 0);
-    overflow: hidden
+/*====================================================CURSES AND CONFERENCES=======================================================*/
+.carta-light{
+    background-color: #fff;
 }
-
-.contact h1 {
-    margin-top: -50px;
+.titulocarta-ligth{
+    margin-top: -5%;
 }
-
-.mapa {
-    border-radius: 2rem;
-    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
-    display: flex;
-    margin: 1.5rem;
-    overflow: hidden;
-    height: auto;
-    width: auto;
-}
-
-.tarjeta_contacto {
-    background-color: rgba(13, 22, 33, 255);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    border-radius: 2rem;
-    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
-    margin: 1.5rem;
-    overflow: hidden;
-}
-
-.tarjeta_contacto p {
-    padding: 10px 15px 0px 15px;
-    font-family: "Montserrat", sans-serif;
-    font-size: medium;
-}
-
-.contact-box {
-    width: clamp(500px, 80vw, 1000px);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: rgba(13, 22, 33, 255);
-    box-shadow: 0px 0px 15px 5px #f39422;
-    border-radius: 20px;
-    margin-bottom: 60px;
-}
-
-.left-side {
-    height: 320px;
-    justify-content: center;
-    align-items: center;
-}
-
-.left-side img {
-    height: 100%;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.right-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding-top: 20px;
-}
-
-.info-required {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-    margin-bottom: 20px;
-}
-
-.right-side form input,
-.right-side form textarea {
-    border: 2px solid #f39422;
-    background-color: rgb(255, 255, 255);
-    font-size: clamp(14px, 3vw, 16px);
-    font-family: "Poppins", sans-serif;
-    color: rgba(13, 22, 33, 255);
-    border-radius: 10px;
-    text-indent: 7px;
-}
-
-.right-side form input {
-    height: 30px;
-    width: clamp(250px, 60vw, 400px);
-}
-
-.right-side form textarea {
-    height: clamp(100px, 60vw, 200px);
-    width: clamp(250px, 60vw, 400px);
-    max-height: clamp(100px, 60vw, 200px);
-    max-width: clamp(250px, 60vw, 400px);
-}
-
-.right-side form label {
-    color: #f39422;
-    font-size: clamp(12px, 5vw, 16px);
-    font-weight: bold;
-}
-
-.right-side form button {
-    border: none;
-    padding: 5px 20px;
-    font-size: clamp(12px, 5vw, 16px);
-    font-weight: bold;
-    cursor: pointer;
-    margin-bottom: 10px;
-    padding: 5px 50px;
-}
-
-@media screen and (max-width: 1040px) {
-    .contact-box {
-        grid-template-columns: 1fr;
-        width: clamp(200px, 80vw, 500px);
-    }
-
-    .left-side {
-        height: 150px;
-        margin-bottom: 30px;
-    }
-
-    .left-side img {
-        margin-top: 20px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    
-
-
-    .mapa {
-        height: 300px;
-    }
-
-    .tarjeta_contacto p {
-        font-size: 12px;
-    }
-
-    .info-required {
-
-        margin-bottom: 10px;
-
-    }
-    .right-side{
-        padding-top: 0%;
-    }
-
-    .contact{
-        padding-bottom: 0%;
-    }
-}
-
 
 /*====================== FOOTER ======================*/
 
@@ -668,7 +479,7 @@ footer {
     justify-content: center;
     align-items: center;
     height: auto;
-    background-color: rgba(13, 22, 33, 255);
+    background-color:#000000;
     bottom: 0%;
     margin-top: -1px;
     overflow: hidden
@@ -686,21 +497,14 @@ footer h2 {
     text-align: center;
     font-size: clamp(9px, 5vw, 16px);
     padding: 20px;
+    font-weight: bold;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
-footer img {
-    width: clamp(80px, 20vw, 80px);
-    border-radius: 10px;
-}
 
 @media (max-width: 412px) {
     footer h2 {
         font-size: small;
-    }
-
-    footer img {
-        width: clamp(70px, 20vw, 70px);
-        border-radius: 10px;
     }
 
 }
