--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -5,12 +5,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@500;600&display=swap");
 
-/*==================================================== FORMATO GENERAL=======================================================*/
+/*==================================================== GENERAL FORMAT =======================================================*/
 
 body {
     background-color: rgb(255, 255, 255);
     font-family: "Raleway", sans-serif;
+    display: flex;         /* Usar flexbox para controlar el flujo de los elementos */
+    flex-direction: column;/* Los elementos van a apilarse en dirección vertical */
+    justify-content: space-between;
 }
+
 
 main {
     font-family: "Montserrat", sans-serif;
@@ -29,6 +33,8 @@ html {
 
 body, html {
     overflow-x: hidden;
+    height: 100%;
+    margin: 0; 
 }
 
 /*====================================================MENU=======================================================*/
@@ -52,6 +58,15 @@ header{
 }
 
 .menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000000;
+    padding: 2px 2px;
+    color: #fff;
+  }
+
+.menu-right {
     background: rgba(0, 0, 0, 0.1);
     display: flex;
     flex-flow: row nowrap;
@@ -60,6 +75,21 @@ header{
     justify-content: right;
     margin-right: 5%;
 }
+
+.menu-left {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 50%;
+    margin-left: 4.5%;
+  }
+  
+.menu-title {
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+  }  
 
 .nav a {
     color: #f3f3fa;
@@ -83,61 +113,61 @@ header{
 
 @media (max-width: 579px) {
     header .menu {
-        display: block;
-        justify-content: center;
-    }
-    .nav{
         display: flex;
-        align-items: center;
-        width: 100%;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .text {
+        flex-grow: 1;  /* Hace que el contenido ocupe el espacio restante */
+        padding: 30px 0px 5px 0px;
+        text-align: center; /* Asegura que el texto dentro esté centrado */
+    }
+
+    .menu-left, .menu-right {
+        width: 100%; 
+        display: flex;  /* Agregar display:flex */
+        justify-content: center;  /* Centrar los contenidos */
+        text-align: center;  /* Asegura que el texto esté centrado */
+    }
+
+    .menu-title {
+        font-size: 20px;
+    }
+
+    .nav {
+        display: flex;
+        justify-content: center;
+        width: 100%;
     }
 
     .nav a {
-        font-size: 12px;
+        font-size: medium;
     }
-    .margen-interno {
-        padding: 0px 25px;
-        justify-content: center;
-    }
-    
-   
+
+
 }
 
 @media screen and (min-width: 580px) and (max-width: 750px) {
     .nav a {
-        font-size: 12px;
+        font-size: medium;
         margin-left: 12px;
     }
     .margen-interno{
         padding: 0px 20px;
     }
-
-    .logo{
-        text-align: center;
-    }
-
-    .social p{
-        font-size: 15px;
-    }
-
-    .social a {
-        display: flex;
-        align-items: center;
     }
    
-}
-/*====================================================PROJECT=======================================================*/
+/*====================================================PROJECTS=======================================================*/
 
-.project {
-    width: 100%;
-    height: 5%;
-    background-color: rgb(0, 0, 0);
-    overflow: hidden;
-    text-align: left;
-    display:block;
+.text {
+    font-family: Arial, sans-serif;
+    text-align: justify;
+    line-height: 1.6;
+    margin: 70px 60px 0px 60px; 
 }
-
 
 h1 {
   font-family:Arial, Helvetica, sans-serif;
@@ -150,14 +180,6 @@ h1 {
   font-weight: bold;
 }
 
-
-.text {
-    font-family: Arial, sans-serif;
-    text-align: justify;
-    line-height: 1.6;
-    margin: 8px 60px 10px 60px; 
-}
-
 h2 {
     font-weight: bold;
     font-size:large;
@@ -166,6 +188,7 @@ h2 {
 h3 {
     font-weight: bold;
     font-size:medium;
+    text-indent: -1.5em; /* Elimina el sangrado para la primera línea */
 }
 
 p {
@@ -190,13 +213,17 @@ ul ul {
     list-style-type: disc;
 }
 
+.top-wave{
+    margin-bottom: 0px;
+}
+
 @media screen and (min-width: 580px) and (max-width: 1046px) {
     .project {
         flex-direction: column;
         justify-content: center;
     }
-    .project p {
-        font-size: 25px;
+    .text {
+        font-size: 15px;
     }
 }
 
@@ -206,10 +233,46 @@ ul ul {
         flex-direction: column;
         justify-content: center;
     }
-    .project p {
-        font-size: medium;
-    }
-    .project img {
-        width: clamp(300px, 30vw, 30px);
+    .text {
+        font-size: small;
     }
 }
+
+/*-------------------------------------- Metodology ------------------------------------------------------*/
+
+/* Estilos básicos del contenido de Methodology */
+.methodology-container {
+    margin: 10px 0;
+}
+
+.toggle-methodology {
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.arrow {
+    margin-right: 5px; /* Para crear espacio entre la flecha y el texto */
+}
+
+.methodology-content {
+    display: none;  /* El contenido estará oculto inicialmente */
+    padding: 10px 0;
+    background-color: #ffffff;
+    margin-top: 10px;
+}
+
+/* Agregar margen y algún borde para claridad en la estructura */
+.section-content {
+    margin-left: 20px;
+}
+
+/* Sección de listas con viñetas */
+ul {
+    list-style: disc;
+    padding-left: 30px;
+}
+ 
