--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -241,9 +241,10 @@ header{
 .about {
     align-items: center;
     justify-content: center;
-    margin-top: -5%;
+    margin-top: -7%;
     margin-bottom: -5%;
     overflow: hidden;
+    height: 490px;
 }
 
 .about_image img {
@@ -252,24 +253,74 @@ header{
     border-radius: 50%;
 }
 
+.about_academic {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Alinea verticalmente al centro */
+    align-items: center;     /* Alinea horizontalmente al centro */
+    text-align: center;      /* Asegura que el texto se centre horizontalmente */
+    width: 100%;
+    height: 100%;
+    margin-top: -20px;
+}
+
+div.about_academic p {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size:large;
+    color:#000;
+    margin: 0%;
+}
 .about_text {
-    padding-top: 50px;
     padding-bottom: 20px;
     margin-left: 3%;
-    width: 50%;
-    
+    width: 50%;   
 }
 .about_text p {
     align-items: center;
     margin-left: 30px;
     gap: 10px;
+    
+}
+
+.about_text p br {
+    display: block;
+    line-height: 0; /* Ajusta para reducir el espacio */
+    margin: 3px 0; /* Personaliza el espaciado */
 }
 .about p {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 17px;
+    font-size: 16px;
     text-align: justify;
     color: rgba(31, 26, 26, 0.904);
 }
+
+
+
+.tarjetas-container-titles{
+    flex-grow: 1; /* Permite que este contenedor crezca y ocupe todo el espacio disponible */
+    width: 69%; /* Asegura que ocupe todo el ancho */
+    height: 69%;
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center; /* Centra el contenido verticalmente */
+    display: block; /* Asegúrate de que esté en formato de bloque */
+    height: auto; /* Ajustar según el contenido */
+    overflow: visible; /* Previene errores visuales */
+    position: relative;
+    margin-bottom: 10%;
+}
+
+.tarjetas-container-titles .slick-slide {
+    height: 100%;
+}
+
+/* Cambiar color de las flechas solo para el carrusel de títulos */
+.tarjetas-container-titles .slick-prev::before, 
+.tarjetas-container-titles .slick-next::before {
+    color: #000; /* Cambia el color aquí */
+}
+
+
+
 
 @media (max-width: 766px) {
     .about_text {
@@ -463,9 +514,10 @@ background-color: transparent;
 }
 
 
-/*====================================================CURSES AND CONFERENCES=======================================================*/
+/*====================================================CURSES=======================================================*/
 .carta-light{
     background-color: #fff;
+    width: auto;
 }
 .titulocarta-ligth{
     margin-top: -5%;
@@ -482,6 +534,7 @@ background-color: transparent;
    height: auto;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Sombra */
    align-items: center;
+   overflow: hidden;
 }
 
 
@@ -510,9 +563,10 @@ background-color: transparent;
     margin-bottom: 5%;
     margin-left: 8%;
     display: flex;
-    height: 200px;  /* Ajusta la altura de la tarjeta */
-    width: 200px;   /* Asegura un ancho constante */
+    height: auto;  /* Ajusta la altura de la tarjeta */
+    width: auto;   /* Asegura un ancho constante */
     flex-direction: column;  /* Organiza el contenido en columna */
+    box-sizing: border-box;
 }
 
 .flip-card-front img,
@@ -590,17 +644,182 @@ background-color: transparent;
 }
 
 .flip-card-back h3 {
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
     margin: 0;                  /* Eliminar márgenes para un ajuste más preciso */
 }
 
 .flip-card-back p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 15px;
     color: #000;
     margin: 0;                  /* Eliminar márgenes para un ajuste más preciso */
 }
+
+/*====================== CONFERENCES ==================================================================*/
+/* Contenedor principal del timeline */
+.timeline-line {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80vw;
+    margin: 50px auto;
+    position: relative;
+    border-top: 3px solid white; /* Línea horizontal */
+    padding: 0 5vw;
+}
+
+/* Agregar flechas en los extremos de la línea */
+.timeline-line::before,
+.timeline-line::after {
+    content: "❮"; /* Flecha izquierda */
+    font-size: 35px;
+    color: white;
+    position: absolute;
+    top: -28px;
+
+}
+
+.timeline-line::after {
+    content: "❯"; /* Flecha derecha */
+    right: -25px;
+    
+}
+
+.timeline-line::before {
+    left: -25px;
+}
+
+/* Cada punto con su etiqueta */
+.timeline-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    cursor: pointer; /* Hace que se note que es interactivo */
+}
+
+/* Punto del timeline */
+.timeline-point {
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    top: -10px;
+    transition: all 0.2s ease-in-out; /* Animación suave */
+}
+
+/* Etiqueta del año (sobre el punto) */
+.timeline-label {
+    position: absolute;
+    bottom: 25px;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    transition: color 0.2s ease-in-out; /* Animación suave */
+}
+
+/* Efecto hover */
+.timeline-item:hover .timeline-point {
+    background-color: rgb(245, 168, 3);; /* Cambia el color del punto */
+    transform: scale(1.5); /* Aumenta el tamaño */
+}
+
+.timeline-item:hover .timeline-label {
+    color: rgb(245, 168, 3); /* Cambia el color del texto */
+    transform: scale(1.5); /* Aumenta el tamaño */
+    
+}
+
+/* Carrusel oculto por defecto */
+.conference-carousel {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+}
+
+/* Estilo para el punto y la etiqueta activa */
+.timeline-point.active,
+.timeline-label.active {
+    transform: scale(1.5);  /* Agrandar el punto y la etiqueta */
+    color: rgb(245, 168, 3);  /* Color para la etiqueta activa */
+}
+
+/* Estilo adicional para el punto */
+.timeline-point.active {
+    background-color: rgb(245, 168, 3);  /* Color de fondo para el punto */
+    border-color: rgb(245, 168, 3);  /* Bordes del punto activos */
+}
+
+/* Opcional: mejorar el contraste y visibilidad */
+.timeline-item {
+    transition: transform 0.2s ease, color 0.2s ease;  /* Animación para una transición suave */
+}
+
+/* Opcional: añadir algo de margen y espaciado */
+.timeline-label {
+    margin-top: 10px;
+}
+
+/* Estilos para las conferencias dentro del carrusel */
+.conference-card {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.conference-carousel-container {
+    margin-top: 100px;
+}
+
+.conference-item {
+    padding: 10px;
+    text-align: center;
+}
+
+.conference-item img {
+    max-width: 100%;
+    height: auto;
+}
+
+.timeline-item {
+    cursor: pointer;
+}
+
+
+/* Cambiar el tamaño del título dentro de cada slide */
+.conference-title {
+    font-size: 16px; /* Ajusta el tamaño del texto del título */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Cambiar el tamaño del texto de los detalles dentro de cada slide */
+.conference-details {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px; /* Ajusta el tamaño del texto de los detalles */
+    color: white;
+}
+
+
+/*MEDIAQUERYS FOR CONFERENCES
+
+/* Cambiar el tamaño del título dentro de cada slide */
+.conference-title {
+    font-size: 24px; /* Ajusta el tamaño del texto del título */
+}
+
+/* Cambiar el tamaño del texto de los detalles dentro de cada slide */
+.conference-details {
+    font-size: 16px; /* Ajusta el tamaño del texto de los detalles */
+}
+
+
 
 /*====================== FOOTER ======================*/
 
